examples/invalid/program63.c
int main() {
    int x;
    x = 5;
    while () {
        x = x + 1;
    }
    return x;
}

